crates/toml/tests/snapshots/invalid/float/nan-incomplete-01.stderr
TOML parse error at line 1, column 21
  |
1 | nan-incomplete-01 = na
  |                     ^^
invalid float, expected `nan`
